<resources>
    <string name="app_name">Intenciones</string>
    <string name="txt_titulo">Intensiones</string>
    <string name="tbtn_1">Ventana 1</string>
    <string name="btn_2">Ventana 2</string>
    <string name="btn_3">A Google</string>
    <string name="btn_1">Regresar</string>
    <string name="txt_tituloop">Realizar Operaciónes</string>
    <string name="txt_suma">Ingresa Un Numero!</string>
    <string name="txt_sumar">Vamos Ingresa Otro Numero!</string>
    <string name="txt_tituloopbtn">Realizar Suma!</string>
    <string name="titulo_opbtnrg">Regresar !</string>
    <string name="titulo_opRes">"Este Es El Resultado: "</string>
    <string name="txt_resultado">Este Es EL Resultado:</string>
</resources>